# wechatbot

./: .env.example  .gitignore  AGENTS.md  README.EN.MD  README.md  main.py  requirements.txt  trouble_shot.md  项目说明.md
.github/workflows/: publish-npm.yml
core/: ai_client.py  config.py  message_handler.py  wechat_bot.py
devtools-bookmark/: README.md  devtools.js  manifest.json  panel.css  panel.html  panel.js
docs/: architecture.md
golang/: README.md  bot.go  go.mod
golang/blog-server/: go.mod  go.sum  main.go
golang/blog-server/articles/: go-tips.md  hello-world.md
golang/examples/echo-bot/: main.go
golang/internal/auth/: login.go
nodejs/: README.md  package.json
nodejs/src/: index.ts
pi-agent/: README.md  package.json
pi-agent/src/: index.ts
plugins/: base_plugin.py  example_plugin.py  plugin_manager.py
python/examples/: ai_bot.py  media_bot.py
rust/: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.test.yml  plan_skill.md
rust/.config/: nextest.toml
rust/config/: app.toml
rust/doc/: README.md  architecture.md  code-analysis.md  configuration.md  deployment.md  operations.md  storage.md  testing.md  workflow.md
rust/examples/: echo_bot.rs  multi_bot_runtime.rs
rust/migrations/: 001_init.sql  002_restructure.sql
rust/scripts/: _common.sh  admin.sh  clean.sh  db.sh  dev.sh  migrate.sh  run_protocol_echo.sh  services.sh  start.sh  status.sh  test.sh  test_all.sh  test_integration.sh  test_services.sh  up_services.sh
rust/skill/: build-and-run.md  test-playbook.md  warning-fix-guideline.md
rust/src/: bot.rs  config.rs  forwarder.rs  ingest.rs  lib.rs  protocol.rs  queue.rs  runtime.rs  session.rs  types.rs
rust/src/admin/: mod.rs  qr.rs  repository.rs  server.rs  state.rs  ui.rs
rust/src/admin/handlers/: mod.rs  pages.rs
rust/src/storage/: media.rs  mod.rs  postgres.rs  redis_state.rs
rust/static/admin/: style.css
rust/templates/: bot_register.html
rust/templates/admin/: bot_create.html  bot_detail.html  bot_list.html  dashboard.html  history.html
rust/tests/: admin_frontend.rs  admin_http.rs  forwarder.rs  queue.rs  repository.rs  storage_media.rs
rust/tests/common/: db.rs  fixtures.rs  mod.rs
rust/wechat_official/: wechat_bot_id.md
utils/: helpers.py  logger.py
webchat/: app.js  index.html  style.css
website/content/en/: golang.mdx  index.mdx  nodejs.mdx  pi-agent.mdx  protocol.mdx  rust.mdx
website/content/zh/: golang.mdx  index.mdx  nodejs.mdx  pi-agent.mdx  protocol.mdx  rust.mdx
website/messages/: en.json
website/src/components/: markdown.tsx  mdx-components.tsx
website/src/styles/: editorial.css
(+2 files in other folders)
