[package]
name = "wechatbot"
version = "0.1.0"
edition = "2021"
description = "WeChat iLink Bot SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/corespeed-io/wechatbot"
homepage = "https://github.com/corespeed-io/wechatbot"
documentation = "https://docs.rs/wechatbot"

[dependencies]
aes = "0.8"
base64 = "0.22"
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
urlencoding = "2"
dirs-next = "2"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "echo_bot"
path = "examples/echo_bot.rs"
